# d8s-ip-addresses

./: .coveragerc  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  conftest.py  pyproject.toml  release-please-config.json  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  python-publish.yml  release-please.yml
d8s_ip_addresses/: __init__.py  ip_addresses.py
democritus_ip_addresses/: __init__.py  ip_addresses.py
docker/: lint.sh
tests/: test_ip_addresses.py
