[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d8s_ip_addresses"
version = "0.7.0"
description = "Democritus functions for working with IP addresses."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU Lesser General Public License v3" }
authors = [{ name = "Floyd Hightower" }]
keywords = ["democritus", "utility", "python", "IP addresses", "ip-addresses-utility"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "d8s-csv>=0.6.0,<1.0",
    "d8s-hypothesis>=0.6.0,<1.0",
    "d8s-networking>=0.4.2,<1.0",
    "hypothesis>=6.0,<7.0",
    "ioc-finder>=9.0,<10.0",
]

[project.urls]
Source = "https://github.com/democritus-project/d8s-ip-addresses"
Issues = "https://github.com/democritus-project/d8s-ip-addresses/issues"

[dependency-groups]
dev = [
    "codecov>=2.1.13,<3.0",
    "d8s-file-system>=0.10.0,<1.0",
    "d8s-lists>=0.8.0,<1.0",
    "d8s-python>=0.9.0,<1.0",
    "d8s-strings>=0.5.0,<1.0",
    "ipython>=8.18.0,<10.0",
    "mypy>=2.0,<3.0",
    "pytest>=9.0,<10.0",
    "pytest-cov>=7.0,<8.0",
    "ruff>=0.15.0,<0.17.0",
]

[tool.hatch.build.targets.wheel]
packages = ["d8s_ip_addresses"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"d8s_ip_addresses/__init__.py" = ["F401", "F403"]
"tests/*" = ["E501"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --cov=. --cov-report term-missing --cov-fail-under 97"
python_files = "tests/test_*.py"
